# OpenGL_SNEAK_GAME

./: CMakeLists.txt  README.md
buildDers04/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: Bait.hpp  circle.hpp  shaderProgram.hpp  square.hpp
include/glad/: glad.h
lib/glfw/lib/pkgconfig/: glfw3.pc
lib/glm/lib/pkgconfig/: glm.pc
shaders/: simpleFss.glsl  simpleVss.glsl
src/: Bait.cpp  circle.cpp  glad.c  main.cpp  shaderprogram.cpp  square.cpp
